--- a/test/reports/FakeXrmEasy_RemoveFromQueueRequestExecutor.htm
+++ b/test/reports/FakeXrmEasy_RemoveFromQueueRequestExecutor.htm
@@ -37,7 +37,7 @@
 <table class="lineAnalysis">
 <thead><tr><th></th><th>#</th><th>Line</th><th></th><th>Line coverage</th></tr></thead>
 <tbody>
-<tr data-coverage="{'AllTestMethods': {'VC': '', 'LVS': 'gray'}}"><td class="gray">&nbsp;</td><td class="leftmargin rightmargin right"></td><td class="rightmargin right"><code>1</code></td><td></td><td class="lightgray"><code>#if&nbsp;FAKE_XRM_EASY_2013&nbsp;||&nbsp;FAKE_XRM_EASY_2015&nbsp;||&nbsp;FAKE_XRM_EASY_2016&nbsp;||&nbsp;FAKE_XRM_EASY_365&nbsp;||&nbsp;FAKE_XRM_EASY_9</code></td></tr>
+<tr data-coverage="{'AllTestMethods': {'VC': '', 'LVS': 'gray'}}"><td class="gray">&nbsp;</td><td class="leftmargin rightmargin right"></td><td class="rightmargin right"><code>1</code></td><td></td><td class="lightgray"><code>#if&nbsp;FAKE_XRM_EASY_2013&nbsp;||&nbsp;FAKE_XRM_EASY_2015&nbsp;||&nbsp;FAKE_XRM_EASY_2016&nbsp;||&nbsp;FAKE_XRM_EASY_365&nbsp;||&nbsp;FAKE_XRM_EASY_CORE_9</code></td></tr>
 <tr data-coverage="{'AllTestMethods': {'VC': '', 'LVS': 'gray'}}"><td class="gray">&nbsp;</td><td class="leftmargin rightmargin right"></td><td class="rightmargin right"><code>2</code></td><td></td><td class="lightgray"><code></code></td></tr>
 <tr data-coverage="{'AllTestMethods': {'VC': '', 'LVS': 'gray'}}"><td class="gray">&nbsp;</td><td class="leftmargin rightmargin right"></td><td class="rightmargin right"><code>3</code></td><td></td><td class="lightgray"><code>using&nbsp;Microsoft.Crm.Sdk.Messages;</code></td></tr>
 <tr data-coverage="{'AllTestMethods': {'VC': '', 'LVS': 'gray'}}"><td class="gray">&nbsp;</td><td class="leftmargin rightmargin right"></td><td class="rightmargin right"><code>4</code></td><td></td><td class="lightgray"><code>using&nbsp;Microsoft.Xrm.Sdk;</code></td></tr>
